tests/baselines/reference/propertyAndAccessorWithSameName.errors.txt
==== tests/cases/compiler/propertyAndAccessorWithSameName.ts (3 errors) ====
    class C {
        x: number;
        get x() { // error
            ~
!!! error TS2000: Duplicate identifier 'x'.
            return 1;
        }
    }
    
    class D {
        x: number;
        set x(v) { } // error
            ~
!!! error TS2000: Duplicate identifier 'x'.
    }
    
    class E {
        private x: number;
        get x() { // error
            ~
!!! error TS2000: Duplicate identifier 'x'.
            return 1;
        }
        set x(v) { }
    }